[Release] Palo Alto Panorama v1.0.0 (#16748)
* Add palo alto panorama v1.0.0

* Add missing config to manifest

* Update dashboards and images

* Update README, CHANGELOG and Dashboards

* Update configuration steps in README

* Resolve changelog issue

* Update README and dashboards as per review comments

* Update pipelines to resolve CI check

* Update standard attributes format

* Update standard attributes groups and names

* Update bytes facets' attributes

* Update order of facets

* Add results to YAML

* Update GeoIP source to check if results include geoip results

* Update IP addresses in sample

* Update log results with GeoIP results

* Update pipeline to rename attribute path and update dashboards

* Resolve ci failures

* Resolve validate-logs failures

* Update remapper in pipeline yaml file

* Update the test results based on the updated remapper in pipeline

* Move remapper to other nested pipeline

* Fix: Updating facets, pipeline and dashboards

* Fix: Updated log test results

* Fix: Remapped 'act' attribute

* Fix: Resolve typo error in log result

* Fix: Updated dashboards and pipeline

* Update test yaml file, changelog and version

---------

Co-authored-by: tirthraj.chaudhari <tirthraj.chaudhari@crestdatasys.com>
Co-authored-by: nisargshah_crest <nisarg@crestdatasys.com>

--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -333,6 +333,8 @@ integration/otel:
 - otel/**/*
 integration/pan_firewall:
 - pan_firewall/**/*
+integration/palo_alto_panorama:
+- palo_alto_panorama/**/*
 integration/pdh_check:
 - pdh_check/**/*
 integration/pgbouncer:
