Bring back the comment when contributors use the `changed` changelog fragment

--- a/.github/workflows/pr-quick-check.yml
+++ b/.github/workflows/pr-quick-check.yml
@@ -58,3 +58,19 @@ jobs:
         --pr-file "$GITHUB_EVENT_PATH"
         ${{ github.event.pull_request.base.repo.private && '--private' || '' }}
         --repo "${{ inputs.repo }}"
+
+    - uses: dorny/paths-filter@v2
+      id: changes
+      with:
+        filters: |
+          changed_fragments:
+            - '*/changelog.d/*.changed'
+
+    - name: Comment
+      if: ${{ steps.changes.outputs.changed_fragments == 'true' }}
+      uses: actions/github-script@0.3.0
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
+          github.issues.createComment({ issue_number, owner, repo, body: "The changelog type `changed` was used in this Pull Request, so the next release will bump major version. Please make sure this is a breaking change, or use the `fixed` or `added` type instead." });
