argo rollouts rec monitor manifest

--- a/argo_rollouts/manifest.json
+++ b/argo_rollouts/manifest.json
@@ -51,6 +51,9 @@
     },
     "logs": {
       "source": "argo_rollouts"
+    },
+    "monitors": {
+      "Rollout Phase": "assets/monitors/rollout_phase.yaml"
     }
   },
   "author": {
