--- a/argo_rollouts/manifest.json
+++ b/argo_rollouts/manifest.json
@@ -53,7 +53,7 @@
       "source": "argo_rollouts"
     },
     "monitors": {
-      "Rollout Phase": "assets/monitors/rollout_phase.yaml"
+      "Rollout Phase": "assets/monitors/rollout_phase.json"
     }
   },
   "author": {
