--- a/argo_workflows/manifest.json
+++ b/argo_workflows/manifest.json
@@ -42,6 +42,9 @@
       "service_checks": {
         "metadata_path": "assets/service_checks.json"
       }
+    },
+    "dashboards": {
+      "Argo Workflows": "assets/dashboards/argo_workflows.json"
     }
   },
   "author": {
