Add monitor to Argo Workflows

--- a/argo_workflows/manifest.json
+++ b/argo_workflows/manifest.json
@@ -45,6 +45,9 @@
     },
     "dashboards": {
       "Argo Workflows": "assets/dashboards/argo_workflows.json"
+    },
+    "monitors": {
+      "errors": "assets/monitors/errors.json"
     }
   },
   "author": {
