--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -21,6 +21,7 @@ datadog-cassandra-nodetool==1.13.0
 datadog-cassandra==1.18.0
 datadog-ceph==2.10.0; sys_platform != 'win32'
 datadog-cert-manager==4.1.0
+datadog-checkpoint-quantum-firewall==1.0.0
 datadog-checks-base==36.5.1
 datadog-checks-dependency-provider==1.4.0
 datadog-checks-downloader==4.5.0
