--- a/requirements-agent-release.txt
+++ b/requirements-agent-release.txt
@@ -120,6 +120,7 @@ datadog-openmetrics==4.2.0
 datadog-openstack-controller==6.4.0
 datadog-openstack==2.0.0
 datadog-oracle==5.2.0
+datadog-palo-alto-panorama==1.0.0
 datadog-pan-firewall==1.2.0
 datadog-pdh-check==2.1.0; sys_platform == 'win32'
 datadog-pgbouncer==6.2.0; sys_platform != 'win32'
