--- a/sqlserver/assets/configuration/spec.yaml
+++ b/sqlserver/assets/configuration/spec.yaml
@@ -687,8 +687,8 @@ files:
         example: master
     - name: ignore_missing_database
       description: |
+        DEPRECATED - use `database_autodiscovery` instead, when database name is uncertain.
         If the DB specified doesn't exist on the server then don't do the check
-        Note: this parameter is deprecated, please use database_autodiscovery in case when database name is uncertain. 
       value:
         type: boolean
         example: false
