--- a/istio/manifest.json
+++ b/istio/manifest.json
@@ -67,7 +67,7 @@
     },
     "saved_views": {
       "Istio Overview": "assets/saved_views/istio_overview.json",
-      "istio Error Overview": "assets/saved_views/istio_error_overview.json",
+      "Istio Error Overview": "assets/saved_views/istio_error_overview.json",
       "Istio Pilot Logs": "assets/saved_views/istio_pilot_logs.json",
       "Istio Pilot Error Logs": "assets/saved_views/istio_pilot_errors.json",
       "Istio Proxyv2 Logs": "assets/saved_views/istio_proxyv2_logs.json",
