--- a/argo_rollouts/manifest.json
+++ b/argo_rollouts/manifest.json
@@ -54,6 +54,10 @@
     },
     "monitors": {
       "Rollout Phase": "assets/monitors/rollout_phase.json"
+    },
+    "saved_views": {
+      "Argo Rollouts Logs Overview": "assets/saved_views/logs_overview.json",
+      "Argo Rollouts Error Logs Overview": "assets/saved_views/error_logs_overview.json"
     }
   },
   "author": {
