--- a/.github/workflows/pr-quick-check.yml
+++ b/.github/workflows/pr-quick-check.yml
@@ -63,14 +63,16 @@ jobs:
       id: changes
       with:
         filters: |
-          changed_fragments:
+          major_bump_fragments:
             - '*/changelog.d/*.changed'
+            - '*/changelog.d/*.removed'
+            - '*/changelog.d/*.major'
 
     - name: Comment
-      if: ${{ steps.changes.outputs.changed_fragments == 'true' }}
+      if: ${{ steps.changes.outputs.major_bump_fragments == 'true' }}
       uses: actions/github-script@0.3.0
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
-          github.issues.createComment({ issue_number, owner, repo, body: "The changelog type `changed` was used in this Pull Request, so the next release will bump major version. Please make sure this is a breaking change, or use the `fixed` or `added` type instead." });
+          github.issues.createComment({ issue_number, owner, repo, body: "The changelog type `changed` or `removed` was used in this Pull Request, so the next release will bump major version. Please make sure this is a breaking change, or use the `fixed` or `added` type instead." });
