Partially remove db exist check if ignore db is false (#17300)
* remove db exist check if ignore db false

* applied linter

* add changelog

* removed obsolete import

* removed import

* put back agent check

* added deprecation

* fixed typo

* applied review comments

* improved check

* applied linter

* Reduced line size

* removed logs

* fixed config example

* removed import

* Improved comment

* removed clean up

* fixed example file

--- a/sqlserver/assets/configuration/spec.yaml
+++ b/sqlserver/assets/configuration/spec.yaml
@@ -686,7 +686,9 @@ files:
         type: string
         example: master
     - name: ignore_missing_database
-      description: If the DB specified doesn't exist on the server then don't do the check
+      description: |
+        DEPRECATED - use `database_autodiscovery` instead, when database name is uncertain.
+        If the DB specified doesn't exist on the server then don't do the check
       value:
         type: boolean
         example: false
