--- a/argo_workflows/manifest.json
+++ b/argo_workflows/manifest.json
@@ -52,7 +52,11 @@
     },
     "monitors": {
       "errors": "assets/monitors/errors.json"
-    }
+    },
+      "saved_views": {
+          "overview": "assets/saved_views/overview.json",
+          "errors": "assets/saved_views/errors.json"
+      }
   },
   "author": {
     "support_email": "help@datadoghq.com",
