--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,6 +8,7 @@ on:
     branches:
     - master
     paths:
+    - '.github/workflows/docs.yml'
     - 'docs/**'
     - 'ddev/**'
     - 'datadog_checks_dev/**'
