--- a/teleport/manifest.json
+++ b/teleport/manifest.json
@@ -15,10 +15,8 @@
       "Supported OS::Linux",
       "Supported OS::Windows",
       "Supported OS::macOS",
-      "Category::",
-      "Offering::",
-      "Queried Data Type::",
-      "Submitted Data Type::"
+      "Category::Cloud",
+      "Category::Security"
     ]
   },
   "assets": {
