--- a/teleport/manifest.json
+++ b/teleport/manifest.json
@@ -8,7 +8,7 @@
     "configuration": "README.md#Setup",
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
-    "description": "Monitor key metrics to monitor the health of your Teleport Cluster.",
+    "description": "Collect key metrics to monitor the health of your Teleport Cluster.",
     "title": "Teleport",
     "media": [],
     "classifier_tags": [
