--- a/sqlserver/datadog_checks/sqlserver/data/conf.yaml.example
+++ b/sqlserver/datadog_checks/sqlserver/data/conf.yaml.example
@@ -188,6 +188,16 @@ instances:
     #
     # include_db_fragmentation_metrics: false
 
+    ## @param include_db_fragmentation_metrics_tempdb - boolean - optional - default: false
+    ## Configure the collection of database index fragmentation statistics in tempdb database from the
+    ## `sys.dm_db_index_physical_stats` DMF.
+    ##
+    ## By default, we do not collect index fragmentation statistics in the tempdb database, as those queries
+    ## might cause blocking. This configuration parameter allows enabling the collection of this metric.
+    ## This parameter is ignored if 'include_db_fragmentation_metrics' is set to false.
+    #
+    # include_db_fragmentation_metrics_tempdb: false
+
     ## @param include_index_usage_metrics - boolean - optional - default: true
     ## Configure the collection of user table index usage statistics from the `sys.dm_db_index_usage_stats` DMV.
     ##
