Add use_guest_hostname option

--- a/esxi/assets/configuration/spec.yaml
+++ b/esxi/assets/configuration/spec.yaml
@@ -30,4 +30,16 @@ files:
           value:
             type: string
             example: <PASSWORD>
+        - name: use_guest_hostname
+          description: |
+            If true, the check will use the guest hostname for VMs instead of the VM name
+            This requires the VM to have VMware tools installed in it. If the guest hostname is
+            not available, it will fallback to the VM name.
+            Use this if you install the agent in VMs so that the hosts are not duplicated
+            in the web application UI.
+            Note: If VMs are duplicated in the Infrastructure List, follow these troubleshooting steps
+                  https://docs.datadoghq.com/integrations/faq/troubleshooting-duplicated-hosts-with-vsphere/.
+          value:
+            type: boolean
+            example: false
         - template: instances/default
