Add support for excluded_host_tags

--- a/esxi/datadog_checks/esxi/data/conf.yaml.example
+++ b/esxi/datadog_checks/esxi/data/conf.yaml.example
@@ -39,6 +39,20 @@ instances:
     #
     # use_guest_hostname: false
 
+    ## @param excluded_host_tags - list of strings - optional - default: []
+    ## The ESXi integration collects tags for every ESXi host or VM in your environment.
+    ## Those tags can be `esxi_url`, esxi_type`, `esxi_host`, `esxi_folder`, `esxi_cluster`
+    ## `esxi_compute`, `esxi_datacenter`, `esxi_datastore` and are attached to the ESXi metrics by default.
+    ## By default those tags are submitted as host tags but you can submit them as metric tags if you need, see:
+    ## https://docs.datadoghq.com/tagging/using_tags/
+    ## You will lose the ability to filter your hosts on the tags you specify but they will appear faster
+    ## and will remove spikes from some `count by {TAG}` queries.
+    ## A good use case is to set this parameter to `[esxi_host]`, indeed with VM migrations this tag is expected to
+    ## change often and it is usually helpful to be informed quickly of this change.
+    #
+    # excluded_host_tags:
+    #   - <HOST_TAG>
+
     ## @param tags - list of strings - optional
     ## A list of tags to attach to every metric and service check emitted by this instance.
     ##
