--- a/esxi/datadog_checks/esxi/data/conf.yaml.example
+++ b/esxi/datadog_checks/esxi/data/conf.yaml.example
@@ -40,6 +40,7 @@ instances:
     # use_guest_hostname: false
 
     ## @param excluded_host_tags - list of strings - optional - default: []
+    ## Use this option to send a subset of host tags as metric tags.
     ## The ESXi integration collects tags for every ESXi host or VM in your environment.
     ## Those tags can be `esxi_url`, esxi_type`, `esxi_host`, `esxi_folder`, `esxi_cluster`
     ## `esxi_compute`, `esxi_datacenter`, `esxi_datastore` and are attached to the ESXi metrics by default.
