adding cinder metric openstack.cinder.volume.count (/v3/{project_id}/volumes/detail)

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -394,6 +394,9 @@ files:
                 anyOf:
                   - type: boolean
                   - type: object
+                    properties:
+                      - name: volumes
+                        type: object
               - name: baremetal
                 anyOf:
                   - type: boolean
