--- a/.github/workflows/config/labeler.yml
+++ b/.github/workflows/config/labeler.yml
@@ -11,7 +11,7 @@ changelog/no-changelog:
 ddev:
 - ddev/**/*
 dependencies:
-- datadog_checks_base/datadog_checks/base/data/agent_requirements.in
+- agent_requirements.in
 dependency_provider:
 - datadog_checks_dependency_provider/**/*
 dev/testing:
