update the config template for collect_topology

--- a/snmp/assets/configuration/spec.yaml
+++ b/snmp/assets/configuration/spec.yaml
@@ -552,3 +552,5 @@ files:
       - template: instances/default
         overrides:
           service.hidden: true
+      - name: collect_topology
+        description: Enable the collection of topology (LLDP/CDP) data
