--- a/snmp/assets/configuration/spec.yaml
+++ b/snmp/assets/configuration/spec.yaml
@@ -554,3 +554,7 @@ files:
           service.hidden: true
       - name: collect_topology
         description: Enable the collection of topology (LLDP/CDP) data
+        value:
+          type: boolean
+          example: true
+          display_default: true
