adding new metric openstack.cinder.pool.count
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -399,6 +399,8 @@ files:
                         type: object
                       - name: transfers
                         type: object
+                      - name: pools
+                        type: object
               - name: baremetal
                 anyOf:
                   - type: boolean
