Remove saved views

--- a/esxi/manifest.json
+++ b/esxi/manifest.json
@@ -42,8 +42,7 @@
         "metadata_path": "assets/service_checks.json"
       }
     },
-    "logs": {},
-    "saved_views": {}
+    "logs": {}
   },
   "author": {
     "support_email": "help@datadoghq.com",
