Add ESXi integration (#17027)
* Skeleton and esxi up metric

* Add config spec and models

* Remove port config option and drop python 3 compat

* Add support for ESXi perf metrics

* Add e2e test

* fix manifest

* [PLINT-311] Add support for VM perf metrics  (#17105)

* Add support for VM perf metrics

* style and add back metrics

* update comment and remove caplog

* remove caplog

* Add metadata for perf metrics

* Add support for external host tags (#17171)

* Add support for VM perf metrics

* style and add back metrics

* update comment and remove caplog

* remove caplog

* Add external host tags

* Add metadata for perf metrics

* Add test for more tag types

* test unknown data type

* fix style

* Fix merge conflict w/ test

* Add to CI configuration

* validate deps

* Add labeler configuration

* Add support for infrastructure metrics (#17202)

* [PLINT-315] Add `use_guest_hostname` option (#17365)

* Add support for infrastructure metrics

* Add use_guest_hostname option

* formatting

* Update esxi/assets/configuration/spec.yaml

Co-authored-by: NouemanKHAL <noueman.khalikine@datadoghq.com>

* Update conf.yaml

* add back removed line

---------

Co-authored-by: NouemanKHAL <noueman.khalikine@datadoghq.com>

* Add metric to check

* Add changelog

* [PLINT-318] Collect version metadata and ensure only connecting to ESXi hosts (#17372)

* Add support for version metadata

* Add unit test for ESXI up (#17373)

* simplify error handling

* [PLINT-315] Add support for excluded_host_tags (#17369)

* Add support for infrastructure metrics

* Add use_guest_hostname option

* formatting

* Update esxi/assets/configuration/spec.yaml

Co-authored-by: NouemanKHAL <noueman.khalikine@datadoghq.com>

* Update conf.yaml

* Add support for excluded_host_tags

* Lint

* Address review

* linting

* lint

* shorten line

* update wording

* Update wording a

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -155,6 +155,9 @@ manifest.json         @DataDog/documentation @DataDog/agent-integrations
 /cloud_foundry_api/manifest.json        @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /cloud_foundry_api/*.md                 @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /cloud_foundry_api/assets/logs/         @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation @DataDog/logs-backend
+/esxi/                                  @DataDog/platform-integrations @DataDog/agent-integrations
+/esxi/manifest.json                     @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
+/esxi/*.md                              @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /openstack/                             @DataDog/platform-integrations @DataDog/agent-integrations
 /openstack/*.md                         @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
 /openstack/manifest.json                @DataDog/platform-integrations @DataDog/agent-integrations @DataDog/documentation
