Add the Teleport Integration (#16877)
* initial integration scaffolding

* add initial setup for integration tests using docker-compose

* add first integration test

* critical test pass

* add test_connect_ok

* fix test_connect_exception and passing test_connect_ok

* add test to check common metrics collection

* add metadata.csv

* ddev test teleport -fs

* delete some comments

* wip: use openmetrics base class

* catch main super.check exception, passing -> first two tests

* move exception to test to unit tests

* add unit tests, setup mocks, fix integration tests

* assert common metrics in unit tests

* add metrics fixture

* add teleport_cache_stale_events mocks

* reporting common metrics

* rename 'version' tag to 'teleport_version'

* format

* remove docker-compose down nothing behavior

* update metadata.csv metric names format

* update unit and integration tests to match the new metric names

* fix implementation to pass the tests

* [PLINT-302] Report Teleport Proxy metrics (#17018)

* add unit tests for proxy metrics

* passing metrics that don't require mocks

* tests passing for grpc_client_* metrics

* separate unit tests by teleport metrics groups

* update teleport proxy metrics test to check all metrics

* update fixtures with missing proxy metrics

* update proxy metric names in the test

* collect proxy metrics in the check

* format

* ignore linting on a long line

* separate metrics maps into metrics.py per suggestion

* ddev validate ci --sync

* ddev validate config teleport -s

* ddev validate models teleport -s

* ddev validate labeler --sync

* remove arch suffix from docker-compose teleport image

* add E2E test

* fix linting

* [PLINT-303] Report Teleport Auth Service and Backends metrics (#17050)

* add test_auth_teleport_metrics test
collect auth service metrics
update fixtures with missing auth service metrics
format
add 'cluster_name

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -570,6 +570,10 @@ coverage:
         target: 75
         flags:
         - teamcity
+      Teleport:
+        target: 75
+        flags:
+        - teleport
       Tekton:
         target: 75
         flags:
@@ -1392,6 +1396,11 @@ flags:
     paths:
     - teamcity/datadog_checks/teamcity
     - teamcity/tests
+  teleport:
+    carryforward: true
+    paths:
+    - teleport/datadog_checks/teleport
+    - teleport/tests
   tekton:
     carryforward: true
     paths:
