--- a/argocd/manifest.json
+++ b/argocd/manifest.json
@@ -8,7 +8,7 @@
     "configuration": "README.md#Setup",
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
-    "description": "Argo CD",
+    "description": "Monitor the health and performance of Argo CD",
     "title": "Argo CD",
     "media": [],
     "classifier_tags": [
