--- a/karpenter/manifest.json
+++ b/karpenter/manifest.json
@@ -8,7 +8,7 @@
     "configuration": "README.md#Setup",
     "support": "README.md#Support",
     "changelog": "CHANGELOG.md",
-    "description": "Integration for Karpenter",
+    "description": "Monitor the health and performance of Karpenter",
     "title": "Karpenter",
     "media": [],
     "classifier_tags": [
