[PLINT-376] Adding glance image member metrics (#17487)
* adding metric openstack.glance.image.member.count

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

* testing member metrics

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

---------

Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -610,6 +610,8 @@ files:
                           - type: boolean
                           - type: object
                             properties:
+                              - name: members
+                                type: boolean
                               - name: tasks
                                 type: boolean
             example:
