--- a/argo_workflows/manifest.json
+++ b/argo_workflows/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": "2.0.0",
   "app_uuid": "f96fd144-a3c0-4fed-adcc-53f11f80ec04",
   "app_id": "argo-workflows",
-  "display_on_public_website": false,
+  "display_on_public_website": true,
   "tile": {
     "overview": "README.md#Overview",
     "configuration": "README.md#Setup",
