adding metric openstack.ironic.node.portgroup.count
Signed-off-by: rahulkaukuntla <rahul.kaukuntla@datadoghq.com>

--- a/openstack_controller/assets/configuration/spec.yaml
+++ b/openstack_controller/assets/configuration/spec.yaml
@@ -448,6 +448,10 @@ files:
                                   type: string
                               - name: interval
                                 type: integer
+                              - name: portgroups
+                                anyOf:
+                                  - type: boolean
+                                  - type: object
                       - name: conductors
                         type: boolean
               - name: load-balancer
